--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="footer">
   
     <div class="f-contact">
-      <h2>XCleats</h2>
+      <h2>MobileCart</h2>
       <h3>Contact</h3>
       <p><strong>Address : </strong>Bhopal, Madhya Pradesh.</p>
       <p><strong>Phone : </strong>+91 1185786754, +91 2264239743</p>
@@ -40,6 +40,5 @@
       <img src="https://cdn-icons-png.flaticon.com/128/196/196578.png" alt="">  
       <img src="https://cdn-icons-png.flaticon.com/128/14062/14062982.png" alt="">  
     </div>
-    <!-- &copy;  %> Developed by gauravXdev • -->
     </footer> 
-    <footer class="copyright"><p> &copy; 2024 • Developed by gauravXdev</p></footer>
+    <footer class="copyright"><p> &copy; 2024 • Developed by Mann Mittal</p></footer>
