--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header class="header">
     <nav class="navbar">
       <div class="logo">
-          <h2>XCleats</h2>
+          <h2>MobileCart</h2>
       </div>   
       <ul class="nav-links">
           <li>
@@ -27,7 +27,7 @@
               <a href="/">Home</a>
           </li>
           <li>
-              <a href="/">Shop</a>
+              <a href="/shop">Shop</a>
           </li>
           <li>
               <a href="/">cart</a>
