--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -100,10 +100,10 @@ p {
   }
 
 .landingPage {
-    height: 100vh;
+    height: 80vh;
     width: 100%;
-    background-image: url("	https://i02.appmifile.com/mi-com-product/fly-birds/xiaomi-smart-tv-x-series-2023/pc/img11.jpg?f=webp");
-    background-size: cover;
+    background-image: url("	https://rukminim2.flixcart.com/fk-p-flap/3376/560/image/61764cca6291a6e1.jpg?q=50");
+    /* background-size: cover; */
     display: flex;
     justify-content: center;
     align-items: center;
